# Quarto

./: .gitignore  CMakeLists.txt  README.md  affichage.c  affichage.h  canonique.c  canonique.h  fichiers.c  fichiers.h  main.c  moteur.c  precalcul.c  precalcul.h  quarto.h  solutions.c  solutions.h  table.c  table.h  tests.c  tests.h
